--- a/main.html
+++ b/main.html
@@ -3,8 +3,6 @@
 <head>
 <meta charset="UTF-8" />
 <title>Sort Without Articles</title>
-</head>
-<body>
 <style>
 body {
 margin: 0;
@@ -16,7 +14,7 @@ align-items: center;
 min-height: 100vh;
 }
 
-#band {
+#bands {
 list-style: inside square;
 font-size: 20px;
 background: white;
@@ -26,12 +24,12 @@ padding: 0;
 box-shadow: 0 0 0 20px rgba(0, 0, 0, 0.05);
 }
 
-#band li {
+#bands li {
 border-bottom: 1px solid #efefef;
 padding: 20px;
 }
 
-#band li:last-child {
+#bands li:last-child {
 border-bottom: 0;
 }
 
@@ -40,42 +38,44 @@ color: #ffc600;
 text-decoration: none;
 }
 </style>
+</head>
+<body>
+<ul id="bands"></ul>
 
-<ul id='band'></ul>
+<script type="text/javascript">
+// Given array of band names
+let bandNames = ['The Beatles', 'Led Zeppelin', 'Aerosmith', 'The Rolling Stones'];
 
-<script type="text/javascript" src="./script.js">
-//your code here
-let bandNames = ["The Beatles", "Rolling Stones", "Led Zeppelin", "Pink Floyd", "The Who", "The Doors"];
-
-// Function to remove articles from band names
-function removeArticle(bandName) {
-// List of articles to remove
-let articles = ["a", "an", "the"];
-// Split band name into words
-let words = bandName.split(" ");
-// Check if first word is an article
-if (articles.includes(words[0].toLowerCase())) {
-// Remove the article
-words.shift();
-}
-// Join the remaining words and return the modified band name
-return words.join(" ");
-}
+// Function to sort band names in lexicographic order excluding articles
+function sortBandNames(bandNames) {
+// Regular expression pattern to match articles
+const articlePattern = /^(a|an|the)\s/i;
 
 // Sort the band names in lexicographic order excluding articles
-bandNames.sort(function(a, b) {
-return removeArticle(a).localeCompare(removeArticle(b));
+bandNames.sort((a, b) => {
+const nameA = a.replace(articlePattern, '').toLowerCase();
+const nameB = b.replace(articlePattern, '').toLowerCase();
+return nameA.localeCompare(nameB);
 });
 
-// Get the ul element with id 'band'
-let ulElement = document.getElementById("band");
-
-// Loop through the sorted band names and add them as li elements to the ul element
-for (let i = 0; i < bandNames.length; i++) {
-let liElement = document.createElement("li");
-liElement.textContent = bandNames[i];
-ulElement.appendChild(liElement);
+return bandNames;
 }
+
+// Sort the band names
+const sortedBandNames = sortBandNames(bandNames);
+
+// Get the <ul> element by its ID
+const bandList = document.getElementById('bands');
+
+// Iterate over the sorted band names and create <li> elements
+sortedBandNames.forEach((bandName) => {
+// Create <li> element
+const listItem = document.createElement('li');
+// Set the text content of the <li> element to the band name
+listItem.textContent = bandName;
+// Append the <li> element to the <ul> element
+bandList.appendChild(listItem);
+});
 </script>
 </body>
-</html
+</html>
